[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Adrian Utrilla <adrianutrilla@gmail.com>"]

[[bin]]

name = "1"
path = "src/1.rs"

[[bin]]

name = "2"
path = "src/2.rs"

[[bin]]

name = "3"
path = "src/3.rs"

[[bin]]

name = "4"
path = "src/4.rs"


[[bin]]

name = "5"
path = "src/5.rs"

[dependencies]

lazy_static = "0.2.2"
itertools = "0.4.4"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.22"
